nextCloud/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: mariadb
          name: mariadb
          ports:
            - containerPort: 3306
              name: sql
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb
