nextCloud/nc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:27-fpm-alpine
          name: nextcloud
          ports:
            - containerPort: 9000
              name: app
          volumeMounts:
            - mountPath: /var/www/html
              name: nc-persistent-storage
      volumes:
        - name: nc-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud
