nextCloud/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  type: ClusterIP
  ports:
   - port: 3306
     name: sql
