nextCloud/nc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  type: ClusterIP
  ports:
   - port: 9000
     name: app
