nextCloud/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nextcloud
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
   - port: 80
     name: http
