nextCloud/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: redis
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
   - port: 6379
     name: redis
