nextCloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    cert-manager.io/issuer: prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50G"
    acme.cert-manager.io/http01-ingress-class: "public"
spec:
  rules:
   - host: cloud.lesquerra.cat
     http:
      paths:
       - backend:
           serviceName: nginx
           servicePort: 80
  tls:
  - hosts:
    - cloud.lesquerra.cat
    secretName: tlssecret
